# py-clangd

./: .gitignore  README.md  benchmark.sh  package-lock.json  package.json  requirements.txt  test_ifdef.c  todo.md  tsconfig.json
add_kernel_pl/: KernelLogEnhancer.cpp  add_kernel_pl_README.md  build.sh
gdb_python/: DEBUG_SKILL.md  Red-Black-Tree.c  dump_to_g6.py  gdb_mcp_server.py
server/: .gitignore  cindex.py  clang_init.py  database.py  database.py.fix1  indexer.py  pyclangd_index.db  pyclangd_server.py  server.py  test.sh  test_expand.py  test_macro.c  test_macro_c.i  test_macro_extent.py  test_macro_libclang.py  test_macro_marker.c  test_macro_marker.py  test_parse2.py  test_parse3.py  test_patch.py  test_snippet.c  test_snippet2.c  test_snippet_ref.c
server/core/: CMakeLists.txt  CMakeLists.txt_static  main.cpp
server/test/: .gitignore  debug_db.py  debug_jump.py  def_tests.json  extract_tests.py  generate_test_jsons.py  inspect_db.py  macro_expander.py  mytest1.py  ref_tests.json  test_ast.py  test_did_save.py  test_engine.py  test_framework.py  test_import.py  test_macro.c  test_macro.h  test_macro_extent.py  test_macro_funcall.c  test_macro_funcall.py  test_macro_tokens.py  test_parse.py  test_parse4.py  test_ref.py  test_snippet3.c  test_snippet5.c
server/test/cases/: dump_ast.py  test_expand_output.txt  test_forward.c  test_func_ptr.c  test_kernel_def.c  (+13 more)
src/: extension.ts
vscode/: package-lock.json  package.json
vscode/src/: extension.ts
vscodePlug/: package.json
vscodePlug/server/: database.py  server.py
vscodePlug/src/: extension.ts
(+106 files in other folders)
